--- a/src/main/webapp/admin_logins_all.xhtml
+++ b/src/main/webapp/admin_logins_all.xhtml
@@ -8,9 +8,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/admin_manage_users.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel id="panelReport" >
                         <f:facet name ="header" >
