Added template to all pages and make cahing process for navigation Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/admin_mange_application_preferences.xhtml
+++ b/src/main/webapp/admin_mange_application_preferences.xhtml
@@ -8,8 +8,8 @@
       xmlns:ez="http://java.sun.com/jsf/composite/ezcomp">
 
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/admin/admin_institutions_index.xhtml">
+            <ui:define name="admin">
                 <h:form>
                     <ez:preferences/>
                 </h:form>
