--- a/src/main/webapp/lab/credit_company.xhtml
+++ b/src/main/webapp/lab/credit_company.xhtml
@@ -1,14 +1,14 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/resources/template/template.xhtml"
+                template="/admin/admin_institutions_index.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:p="http://primefaces.org/ui">
 
 
-    <ui:define name="content">
+    <ui:define name="admin">
 
         <h:panelGroup >
             <h:form  >
@@ -22,7 +22,7 @@
                     <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop">
 
                         <h:panelGrid id="gpSelect" columns="1"  >
-                            <p:panel >
+                            <p:panel style="height: 400px">
                                 <h:panelGrid id="gpSelectText" >
                                     <h:selectOneListbox  id="lstSelect"   size="10" value="#{creditCompanyController.current}" style="min-width: 223px">
                                         <f:selectItems  value="#{creditCompanyController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
@@ -40,11 +40,11 @@
                             </p:panel>
                         </h:panelGrid  >
 
-                        <p:panel>
+                        <p:panel style="width: 800px">
                             <h:panelGrid id="gpDetail" columns="1">
                                 <p:tabView>
-                                    <p:tab title="Institution Detail">
-                                        <h:panelGrid id="gpDetailText" columns="2">
+                                    <p:tab title="Institution Detail"> 
+                                        <h:panelGrid id="gpDetailText" columns="2" style="width: 600px">
                                             <h:outputText id="lblName" value="Name" ></h:outputText>
                                             <h:inputText autocomplete="off" id="txtName" value="#{creditCompanyController.current.name}"  ></h:inputText>
 
