--- a/src/main/webapp/common/manage_item_fees.xhtml
+++ b/src/main/webapp/common/manage_item_fees.xhtml
@@ -10,9 +10,9 @@
     </h:head>
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/admin_fees.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
 
                 <h:form>
                     <p:panel header="Manage Item Fees" >
