--- a/src/main/webapp/membership/payment_scheme.xhtml
+++ b/src/main/webapp/membership/payment_scheme.xhtml
@@ -1,14 +1,14 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/resources/template/template.xhtml"
+                template="/admin_fees.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:p="http://primefaces.org/ui">
 
 
-    <ui:define name="content">
+    <ui:define name="subcontent">
 
         <h:panelGroup >
             <h:form  >
@@ -18,13 +18,13 @@
 
 
 
-                <p:panel header="Manage Discount Scheme" >
+                <p:panel header="Manage Discount Scheme" style="height: 1000px" >
                     <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop">
 
                         <h:panelGrid id="gpSelect" columns="1"  >
-                            <p:panel >
+                            <p:panel style="width: 400px; height: 300px">
                                 <h:panelGrid id="gpSelectText" >
-                                    <h:selectOneListbox  id="lstSelect"   size="10" value="#{paymentSchemeController.current}" style="min-width: 223px">
+                                    <h:selectOneListbox  id="lstSelect"   size="9" value="#{paymentSchemeController.current}" style="min-width: 243px">
                                         <f:selectItems  value="#{paymentSchemeController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
                                         <f:ajax render="gpDetail" execute="lstSelect" >
                                         </f:ajax>
@@ -46,8 +46,8 @@
                             </p:panel>
                         </h:panelGrid  >
 
-                        <p:panel>
-                            <h:panelGrid id="gpDetail" columns="1">
+                        <p:panel style="width: 700px; height: 300px">
+                            <h:panelGrid id="gpDetail" columns="1" style="width: 700px;">
                                 <h:panelGrid id="gpDetailText" columns="2">
                                     <h:outputText id="lblName" value="Name" ></h:outputText>
                                     <h:inputText autocomplete="off" id="txtName" value="#{paymentSchemeController.current.name}"  ></h:inputText>
