--- a/src/main/webapp/membership/payment_scheme_discount_pharmacy_by_category.xhtml
+++ b/src/main/webapp/membership/payment_scheme_discount_pharmacy_by_category.xhtml
@@ -9,9 +9,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/admin_fees.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel header="Pharmacy Membership Discount Matrix" id="reportPrint">
 
