--- a/src/main/webapp/admin/department.xhtml
+++ b/src/main/webapp/admin/department.xhtml
@@ -14,7 +14,7 @@
 
 
                 <h:form >
-                    <p:tabView id="gpDetail" >
+                    <p:tabView id="gpDetail" style="width: 1050px">
                         <p:tab title="Basic Details" >
                             <h:panelGrid columns="1">
 
@@ -27,36 +27,36 @@
                                     <h:outputText id="lblName" value="Name"  ></h:outputText>
                                     <p:inputText autocomplete="off" 
                                                  id="txtName" value="#{departmentController.current.name}" 
-                                                 styleClass="longText"></p:inputText>
+                                                 styleClass="longText" style="width: 650px"></p:inputText>
                                     <h:outputText id="lblTName" value="Code"  ></h:outputText>
                                     <p:inputText autocomplete="off" 
                                                  id="txtTName" value="#{departmentController.current.code}" 
-                                                 styleClass="longText"></p:inputText>
+                                                 styleClass="longText" style="width: 650px"></p:inputText>
                                     <h:outputText value="Code" />                                   
-                                    <p:inputText autocomplete="off"  value="#{departmentController.current.departmentCode}"  />
+                                    <p:inputText autocomplete="off"  value="#{departmentController.current.departmentCode}"  style="width: 650px"/>
 
                                     <h:outputText  value="Printing Name" ></h:outputText>
                                     <p:inputText autocomplete="off"  styleClass="longText"
-                                                 value="#{departmentController.current.printingName}"  ></p:inputText>
+                                                 value="#{departmentController.current.printingName}" style="width: 650px" ></p:inputText>
                                     <h:outputText  value="Adress" ></h:outputText>
-                                    <p:inputTextarea styleClass="longText" value="#{departmentController.current.address}"  ></p:inputTextarea>
+                                    <p:inputTextarea styleClass="longText" value="#{departmentController.current.address}"  style="width: 650px"></p:inputTextarea>
                                     <h:outputText  value="Tel. No. 1" ></h:outputText>
-                                    <p:inputText autocomplete="off"  value="#{departmentController.current.telephone1}"  ></p:inputText>
+                                    <p:inputText autocomplete="off"  value="#{departmentController.current.telephone1}"  style="width: 650px"></p:inputText>
                                     <h:outputText  value="Tel. No. 2" ></h:outputText>
-                                    <p:inputText autocomplete="off"  value="#{departmentController.current.telephone2}"  ></p:inputText>
+                                    <p:inputText autocomplete="off"  value="#{departmentController.current.telephone2}"  style="width: 650px"></p:inputText>
                                     <h:outputText  value="Fax" ></h:outputText>
-                                    <p:inputText autocomplete="off"  value="#{departmentController.current.fax}"  ></p:inputText>
+                                    <p:inputText autocomplete="off"  value="#{departmentController.current.fax}" style="width: 650px" ></p:inputText>
                                     <h:outputText  value="Email" ></h:outputText>
-                                    <p:inputText autocomplete="off"  value="#{departmentController.current.email}"  ></p:inputText>
+                                    <p:inputText autocomplete="off"  value="#{departmentController.current.email}" style="width: 650px" ></p:inputText>
                                     <h:outputText id="lblDept" value="Department Type" ></h:outputText>
                                     <h:outputText id="lblDeptTem" value="Department Type" rendered="#{departmentController.current eq null}" ></h:outputText>
-                                    <p:selectOneMenu id="cmbDept" value="#{departmentController.current.departmentType}" rendered="#{departmentController.current ne null}" >
+                                    <p:selectOneMenu id="cmbDept" value="#{departmentController.current.departmentType}" rendered="#{departmentController.current ne null}" style="width: 650px">
                                         <f:selectItem itemLabel="Select the Department Type" />
                                         <f:selectItems value="#{departmentController.departmentType}"/>                                        
                                     </p:selectOneMenu>
 
                                     <h:outputText id="lblIns" value="Institution" ></h:outputText>
-                                    <p:autoComplete  completeMethod="#{institutionController.completeIns}" 
+                                    <p:autoComplete  completeMethod="#{institutionController.completeIns}" style="width: 650px" 
                                                      var="pta" itemLabel="#{pta.name}" itemValue="#{pta}" forceSelection="true" value="#{departmentController.current.institution}" ></p:autoComplete>
 
 
