--- a/src/main/webapp/lab/collecting_centre.xhtml
+++ b/src/main/webapp/lab/collecting_centre.xhtml
@@ -18,7 +18,7 @@
 
 
 
-                <p:panel header="Manage Collecting Centres" >
+                <p:panel header="Manage Collecting Centres">
                     <h:panelGrid id ="gpVeda" columns="4" styleClass="alignTop"  style="height: 200px">
 
                         <div class="row" >
@@ -33,14 +33,14 @@
 
                                         </f:facet>
                                         <h:panelGrid id="gpSelectText" >
-                                            <p:inputText autocomplete="off" id="txtSearch" value="#{collectingCentreController.selectText}" >
+                                            <p:inputText style="min-width: 400px" autocomplete="off" id="txtSearch" value="#{collectingCentreController.selectText}" >
                                                 <f:ajax execute="txtSearch" render="lstSelect" event="keyup" />
                                             </p:inputText>
-                                            <h:selectOneListbox  id="lstSelect"   size="10" value="#{collectingCentreController.current}" style="min-width: 223px">
+                                            <p:selectOneListbox  id="lstSelect" class="w-100" scrollHeight="500"  value="#{collectingCentreController.current}" style="min-width: 400px" >
                                                 <f:selectItems  value="#{collectingCentreController.selectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
                                                 <f:ajax render="gpDetail " execute="lstSelect" >
                                                 </f:ajax>
-                                            </h:selectOneListbox>
+                                            </p:selectOneListbox>
                                         </h:panelGrid>
                                         <h:panelGrid id="gpSelectButtons" columns="1"  >
                                             <p:commandButton id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
@@ -51,7 +51,7 @@
                             </div>
 
                             <div class="col-md-8">
-                                <p:panel style="width:700px; height: 400px">
+                                <p:panel style="width:650px; height: 400px">
                                     <p:panel id="gpDetail" >
                                         <f:facet name="header" >
                                             <p:outputLabel value="Details" />
@@ -63,45 +63,46 @@
                                             <h:outputText id="lblName" value="Name"  ></h:outputText>
                                             <p:inputText autocomplete="off" id="txtName" 
                                                          styleClass="longText"
+                                                         style="min-width: 500px" 
                                                          value="#{collectingCentreController.current.name}"  ></p:inputText>
 
                                             <h:outputText id="lblChqPrnName" value="Printi Name" ></h:outputText>
                                             <p:inputText autocomplete="off" id="txtChqPrnName" 
                                                          styleClass="longText"
-                                                         value="#{collectingCentreController.current.chequePrintingName}"  ></p:inputText>
+                                                         value="#{collectingCentreController.current.chequePrintingName}"  style="min-width: 500px" ></p:inputText>
 
                                             <h:outputText value="Code" >                                        
                                             </h:outputText>
-                                            <p:inputText autocomplete="off"  value="#{collectingCentreController.current.institutionCode}"  >
+                                            <p:inputText autocomplete="off"  value="#{collectingCentreController.current.institutionCode}"  style="min-width: 500px" >
                                             </p:inputText> 
 
                                             <h:outputText value="Descreption" >                                        
                                             </h:outputText>
-                                            <p:inputTextarea styleClass="longText" value="#{collectingCentreController.current.descreption}"  >
+                                            <p:inputTextarea styleClass="longText" value="#{collectingCentreController.current.descreption}" style="min-width: 500px"  >
                                             </p:inputTextarea> 
 
                                             <h:outputText value="Credit Limit" >                                        
                                             </h:outputText>
-                                            <p:inputText autocomplete="off"  value="#{collectingCentreController.current.allowedCredit}"  >
+                                            <p:inputText autocomplete="off"  value="#{collectingCentreController.current.allowedCredit}"  style="min-width: 500px" >
                                             </p:inputText>
 
                                             <h:outputText id="lblPhone" value="Phone" ></h:outputText>
-                                            <p:inputText autocomplete="off" id="txtPhone" value="#{collectingCentreController.current.phone}"  ></p:inputText>
+                                            <p:inputText autocomplete="off" id="txtPhone" value="#{collectingCentreController.current.phone}"  style="min-width: 500px" ></p:inputText>
 
                                             <h:outputText id="lblFax" value="Fax" ></h:outputText>
-                                            <p:inputText autocomplete="off" id="txtFax" value="#{collectingCentreController.current.fax}"  ></p:inputText>
+                                            <p:inputText autocomplete="off" id="txtFax" value="#{collectingCentreController.current.fax}" style="min-width: 500px"  ></p:inputText>
 
                                             <h:outputText id="lblEMail" value="Email" ></h:outputText>
-                                            <p:inputText autocomplete="off" id="txtEmail" value="#{collectingCentreController.current.email}"  ></p:inputText>
+                                            <p:inputText autocomplete="off" id="txtEmail" value="#{collectingCentreController.current.email}" style="min-width: 500px"  ></p:inputText>
 
                                             <h:outputText id="lblAdress" value="Address" ></h:outputText>
-                                            <p:inputTextarea id="txtAdress" value="#{collectingCentreController.current.address}" styleClass="longText" ></p:inputTextarea>
+                                            <p:inputTextarea id="txtAdress" value="#{collectingCentreController.current.address}" styleClass="longText" style="min-width: 500px"  ></p:inputTextarea>
 
                                             <h:outputText id="lblWeb" value="Web" ></h:outputText>
-                                            <p:inputText autocomplete="off" id="txtWeb" value="#{collectingCentreController.current.web}"  ></p:inputText>
+                                            <p:inputText autocomplete="off" id="txtWeb" value="#{collectingCentreController.current.web}" style="min-width: 500px"  ></p:inputText>
 
                                             <h:outputText id="lblAcc" value="Account No" ></h:outputText>
-                                            <p:inputText autocomplete="off" id="txtAcc" value="#{collectingCentreController.current.accountNo}"  ></p:inputText>
+                                            <p:inputText autocomplete="off" id="txtAcc" value="#{collectingCentreController.current.accountNo}" style="min-width: 500px"  ></p:inputText>
 
                                             <h:outputText value="Creater" ></h:outputText>
                                             <h:outputText value="#{collectingCentreController.current.creater.webUserPerson.name}" ></h:outputText>
