--- a/src/main/webapp/lab/institution_branch.xhtml
+++ b/src/main/webapp/lab/institution_branch.xhtml
@@ -26,12 +26,12 @@
                             <h:panelGrid id="gpSelect" columns="1"  >
 
                                 <p:panel >
-                                    <h:panelGrid id="gpSelectText" >
-                                        <h:inputText autocomplete="off" id="txtSearch" value="#{institutionBranchController.selectText}" >
+                                    <h:panelGrid id="gpSelectText">
+                                        <h:inputText autocomplete="off" id="txtSearch" value="#{institutionBranchController.selectText}" class="w-100" >
                                             <f:ajax execute="txtSearch" render="lstSelect" event="keyup" />
                                         </h:inputText>
 
-                                        <p:selectOneListbox  id="lstSelect"   value="#{institutionBranchController.current}" style="min-width: 223px; height: 300px;">
+                                        <p:selectOneListbox  id="lstSelect"   value="#{institutionBranchController.current}" class="w-100" scrollHeight="500" style="min-width: 500px" >
                                             <f:selectItems  value="#{institutionBranchController.selectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
                                             <p:ajax event="change"   update="gpDetail" process="lstSelect" >
                                             </p:ajax>
@@ -48,18 +48,18 @@
                                 </p:panel>
                             </h:panelGrid  >
 
-                            <p:panel>
+                            <p:panel style="height: 525px">
 
                                 <h:panelGrid id="gpDetail" columns="1">
                                     <h:panelGrid id="gpDetailText" columns="2">
                                         <h:outputText  value="Branch Name" ></h:outputText>
-                                        <h:inputText autocomplete="off"  value="#{institutionBranchController.current.name}"  ></h:inputText>
+                                        <h:inputText autocomplete="off"  value="#{institutionBranchController.current.name}"  class="w-100" style="min-width: 400px" ></h:inputText>
                                         <h:outputText value="Branch Code" >                                        
                                         </h:outputText>
-                                        <h:inputText autocomplete="off"  value="#{institutionBranchController.current.institutionCode}"  >
+                                        <h:inputText autocomplete="off"  value="#{institutionBranchController.current.institutionCode}"  class="w-100" style="min-width: 400px">
                                         </h:inputText>   
                                         <h:outputText value="Bank" ></h:outputText>
-                                        <h:selectOneListbox id="cmbIns" value="#{institutionBranchController.current.institution}" size="1">
+                                        <h:selectOneListbox id="cmbIns" value="#{institutionBranchController.current.institution}" class="w-100" style="min-width: 400px" size="1">
                                             <f:selectItem itemLabel="Select the Institution" />
                                             <f:selectItems value="#{institutionController.banks}" var="i" itemLabel="#{i.name}" itemValue="#{i}" />
                                         </h:selectOneListbox>
