--- a/src/main/webapp/management/department.xhtml
+++ b/src/main/webapp/management/department.xhtml
@@ -93,36 +93,36 @@
                                                     <h:outputText id="lblName" value="Name"  ></h:outputText>
                                                     <p:inputText autocomplete="off" 
                                                                  id="txtName" value="#{departmentController.current.name}" 
-                                                                 styleClass="longText"></p:inputText>
+                                                                 styleClass="longText" style="width: 450px"></p:inputText>
                                                     <h:outputText id="lblTName" value="Code"  ></h:outputText>
                                                     <p:inputText autocomplete="off" 
                                                                  id="txtTName" value="#{departmentController.current.code}" 
-                                                                 styleClass="longText"></p:inputText>
+                                                                 styleClass="longText" style="width: 450px"></p:inputText>
                                                     <h:outputText value="Code" />                                   
-                                                    <p:inputText autocomplete="off"  value="#{departmentController.current.departmentCode}"  />
+                                                    <p:inputText autocomplete="off" style="width: 450px" value="#{departmentController.current.departmentCode}"  />
 
                                                     <h:outputText  value="Printing Name" ></h:outputText>
-                                                    <p:inputText autocomplete="off"  styleClass="longText"
+                                                    <p:inputText autocomplete="off" style="width: 450px" styleClass="longText"
                                                                  value="#{departmentController.current.printingName}"  ></p:inputText>
                                                     <h:outputText  value="Adress" ></h:outputText>
-                                                    <p:inputTextarea styleClass="longText" value="#{departmentController.current.address}"  ></p:inputTextarea>
+                                                    <p:inputTextarea style="width: 450px" styleClass="longText" value="#{departmentController.current.address}"  ></p:inputTextarea>
                                                     <h:outputText  value="Tel. No. 1" ></h:outputText>
-                                                    <p:inputText autocomplete="off"  value="#{departmentController.current.telephone1}"  ></p:inputText>
+                                                    <p:inputText style="width: 450px" autocomplete="off"  value="#{departmentController.current.telephone1}"  ></p:inputText>
                                                     <h:outputText  value="Tel. No. 2" ></h:outputText>
-                                                    <p:inputText autocomplete="off"  value="#{departmentController.current.telephone2}"  ></p:inputText>
+                                                    <p:inputText style="width: 450px" autocomplete="off"  value="#{departmentController.current.telephone2}"  ></p:inputText>
                                                     <h:outputText  value="Fax" ></h:outputText>
-                                                    <p:inputText autocomplete="off"  value="#{departmentController.current.fax}"  ></p:inputText>
+                                                    <p:inputText style="width: 450px" autocomplete="off"  value="#{departmentController.current.fax}"  ></p:inputText>
                                                     <h:outputText  value="Email" ></h:outputText>
-                                                    <p:inputText autocomplete="off"  value="#{departmentController.current.email}"  ></p:inputText>
+                                                    <p:inputText style="width: 450px" autocomplete="off"  value="#{departmentController.current.email}"  ></p:inputText>
                                                     <h:outputText id="lblDept" value="Department Type" ></h:outputText>
                                                     <h:outputText id="lblDeptTem" value="Department Type" rendered="#{departmentController.current eq null}" ></h:outputText>
-                                                    <p:selectOneMenu id="cmbDept" value="#{departmentController.current.departmentType}" rendered="#{departmentController.current ne null}" >
+                                                    <p:selectOneMenu style="width: 450px" id="cmbDept" value="#{departmentController.current.departmentType}" rendered="#{departmentController.current ne null}" >
                                                         <f:selectItem itemLabel="Select the Department Type" />
                                                         <f:selectItems value="#{departmentController.departmentType}"/>                                        
                                                     </p:selectOneMenu>
 
                                                     <h:outputText id="lblIns" value="Institution" ></h:outputText>
-                                                    <p:autoComplete  completeMethod="#{institutionController.completeCompany}" 
+                                                    <p:autoComplete  style="width: 450px" completeMethod="#{institutionController.completeCompany}" 
                                                                      var="pta" itemLabel="#{pta.name}" itemValue="#{pta}" forceSelection="true" value="#{departmentController.current.institution}" ></p:autoComplete>
 
 
@@ -134,9 +134,9 @@
                                         <p:tab title="Pricing Details">
                                             <h:panelGrid columns="2" >
                                                 <h:outputText value="OPD Margin Percenttage " />                                   
-                                                <p:inputText autocomplete="off"  value="#{departmentController.current.margin}"  />
-                                                <h:outputText value="Pharmacy Margin Percentage " />                                   
-                                                <p:inputText autocomplete="off"  value="#{departmentController.current.pharmacyMarginFromPurchaseRate}"  />
+                                                <p:inputText style="width: 450px" autocomplete="off"  value="#{departmentController.current.margin}"  />
+                                                <h:outputText style="width: 450px" value="Pharmacy Margin Percentage " />                                   
+                                                <p:inputText style="width: 450px" autocomplete="off"  value="#{departmentController.current.pharmacyMarginFromPurchaseRate}"  />
 
                                             </h:panelGrid>
                                         </p:tab>
